--- a/Semantic_Segmentation.ipynb
+++ b/Semantic_Segmentation.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1jCuFfDX_kYggZY38g-sYFmAI2FDgZMZN",
-      "authorship_tag": "ABX9TyNmeHB96SKAkky1DfEZL/Ul",
+      "authorship_tag": "ABX9TyN+M6tVXOYoC6az8YPM4zOQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,12 +88,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T49EAMFNqCAn",
-        "outputId": "4f42dba8-4fd9-429f-d553-e1d25e488e11"
+        "outputId": "b905d16e-326c-4198-c834-28f72a779b9a"
       },
       "source": [
         "%cd '/content/drive/MyDrive/Datasets /'"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -131,7 +131,7 @@
         "import torchvision.transforms.functional as TF\n",
         "import torch.nn.functional as F"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
         "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
         "LR = 1e-4"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
         "train_path = 'gtFine/train'\n",
         "val_path  = 'gtFine/test'"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
       "source": [
         "dataset = datasets.ImageFolder(train_path,transform=transforms.ToTensor())"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
           "height": 292
         },
         "id": "HYWzYDVgpJK_",
-        "outputId": "e41a26e1-9868-467b-ebc0-565f5aba0f59"
+        "outputId": "b8d9da0c-064c-4121-9af3-1010ed6e314c"
       },
       "source": [
         "#Viewing the images \n",
@@ -200,7 +200,7 @@
         "plt.axis('off')\n",
         "plt.title(\"Label\")"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
@@ -252,12 +252,27 @@
         "        \n",
         "        img_output,_ = self.dataset[3*index+2]\n",
         "        img_output = 255*img_output #This step is done so that our labels have integer values\n",
+        "\n",
+        "        #Create a boolean mask\n",
+        "        mask = torch.tensor([[0,0],[1,1],[3,2],[4,3],[7,4],[8,5],[11,6],\n",
+        "                             [17,7],[20,8],[21,9],[22,10],[23,11],[24,12],[25,13],[26,14],[33,15]])\n",
+        "\n",
+        "        #Apply a mask on the labels\n",
+        "        img_output = img_output.view(-1)\n",
+        "        img_output = img_output.to(torch.int64)\n",
+        "        boolean_mask = (img_output == mask[:,:1])\n",
+        "\n",
+        "        for i in range(boolean_mask.shape[0]):\n",
+        "          img_output[boolean_mask[i,:]] = mask[i,1]\n",
+        "\n",
+        "        img_output = img_output.view(3,1024,2048)\n",
+        "\n",
         "        return img_input,img_output\n",
         "     \n",
         "    def __len__(self):\n",
         "        return int(len(self.dataset)/3) #Divided by 3 since it contains grayscale images and labels as well as seperate images"
       ],
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -269,7 +284,7 @@
         "train_dataset = CityScapeDataset(train_path)\n",
         "test_dataset = CityScapeDataset(val_path)"
       ],
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -279,12 +294,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5cBJDu8ZpXq4",
-        "outputId": "fa6a020b-4188-4ca5-8903-b1f54271a8f9"
+        "outputId": "2a5ccd89-d96d-4106-dbef-783dd351e0c9"
       },
       "source": [
         "len(train_dataset)"
       ],
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,80 +311,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4VI1P9FNpbKW",
-        "outputId": "c69d052a-a124-4f53-cd24-a35575000980"
-      },
-      "source": [
-        "train_dataset[0]"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(tensor([[[-2.1179, -2.1179, -2.1179,  ..., -2.1179, -2.1179, -2.1179],\n",
-              "          [-2.1179, -2.1179, -2.1179,  ..., -2.1179, -2.1179, -2.1179],\n",
-              "          [-2.1179, -2.1179, -2.1179,  ..., -2.1179, -2.1179, -2.1179],\n",
-              "          ...,\n",
-              "          [-2.1179, -2.1179, -2.1179,  ..., -2.1179, -2.1179, -2.1179],\n",
-              "          [-2.1179, -2.1179, -2.1179,  ..., -2.1179, -2.1179, -2.1179],\n",
-              "          [-2.1179, -2.1179, -2.1179,  ..., -2.1179, -2.1179, -2.1179]],\n",
-              " \n",
-              "         [[-2.0357, -2.0357, -2.0357,  ..., -2.0357, -2.0357, -2.0357],\n",
-              "          [-2.0357, -2.0357, -2.0357,  ..., -2.0357, -2.0357, -2.0357],\n",
-              "          [-2.0357, -2.0357, -2.0357,  ..., -2.0357, -2.0357, -2.0357],\n",
-              "          ...,\n",
-              "          [-2.0357, -2.0357, -2.0357,  ..., -2.0357, -2.0357, -2.0357],\n",
-              "          [-2.0357, -2.0357, -2.0357,  ..., -2.0357, -2.0357, -2.0357],\n",
-              "          [-2.0357, -2.0357, -2.0357,  ..., -2.0357, -2.0357, -2.0357]],\n",
-              " \n",
-              "         [[-1.8044, -1.8044, -1.8044,  ..., -1.8044, -1.8044, -1.8044],\n",
-              "          [-1.8044, -1.8044, -1.8044,  ..., -1.8044, -1.8044, -1.8044],\n",
-              "          [-1.8044, -1.8044, -1.8044,  ..., -1.8044, -1.8044, -1.8044],\n",
-              "          ...,\n",
-              "          [-1.8044, -1.8044, -1.8044,  ..., -1.8044, -1.8044, -1.8044],\n",
-              "          [-1.8044, -1.8044, -1.8044,  ..., -1.8044, -1.8044, -1.8044],\n",
-              "          [-1.8044, -1.8044, -1.8044,  ..., -1.8044, -1.8044, -1.8044]]]),\n",
-              " tensor([[[3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          ...,\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.]],\n",
-              " \n",
-              "         [[3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          ...,\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.]],\n",
-              " \n",
-              "         [[3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          ...,\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.],\n",
-              "          [3., 3., 3.,  ..., 3., 3., 3.]]]))"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 16
+          "execution_count": 56
         }
       ]
     },
@@ -380,12 +322,12 @@
       },
       "source": [
         "#Make the data_loader now so that the data is ready for training\n",
-        "batch_size = 16\n",
+        "batch_size = 64\n",
         "\n",
         "train_loader = DataLoader(train_dataset,batch_size)\n",
         "test_loader  = DataLoader(test_dataset,batch_size*2)"
       ],
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -429,7 +371,7 @@
         "        out = self.act2(self.bn2(self.conv2(out)))\n",
         "        return out"
       ],
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -456,7 +398,7 @@
         "        out = torch.cat([skip_connection,out],axis = 1)\n",
         "        return out"
       ],
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -509,7 +451,7 @@
         "#         print(\"2:{}\".format(out.shape))\n",
         "        return self.bottom(x)"
       ],
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -583,7 +525,7 @@
         "            \n",
         "        return self.final(y)"
       ],
-      "execution_count": null,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -593,13 +535,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_XIipuU9pyzS",
-        "outputId": "ba276f86-e948-418c-a9ba-991a7314269d"
+        "outputId": "052c2299-d9e1-4c11-80d6-e11a6ab6535b"
       },
       "source": [
         "model = Unet(num_classes=1)\n",
         "model.to(DEVICE)"
       ],
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -694,157 +636,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZiqDEBmhp1aR"
-      },
-      "source": [
-        "x = torch.randn((3,3,256,256), device = DEVICE)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6qVh5PtHrFIQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "974f6736-ee26-4757-83f4-6bce29b0f196"
-      },
-      "source": [
-        "model(x).shape"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "torch.Size([3, 1, 256, 256])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 25
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DUv_PKdH25co",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2f8260cb-d696-4f0c-9f03-373c197dc29e"
-      },
-      "source": [
-        "train_dataset[0][0]"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(tensor([[[0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          ...,\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-              " \n",
-              "         [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          ...,\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-              " \n",
-              "         [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          ...,\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "          [0., 0., 0.,  ..., 0., 0., 0.]]]), 0)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 27
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jFY2Qqms-VG3"
-      },
-      "source": [
-        "val , _ = torch.max(model(x),axis = 1)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "R6kAVkFyIE6r",
-        "outputId": "fa60aa13-ac7b-4c12-80ba-9f0773e250b4"
-      },
-      "source": [
-        "train_dataset[0][1]"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[[0.0000, 0.0627, 0.0000,  ..., 0.0000, 0.0824, 0.0000],\n",
-              "         [0.0745, 0.2941, 0.3412,  ..., 0.2863, 0.3255, 0.1176],\n",
-              "         [0.0157, 0.3451, 0.4667,  ..., 0.4196, 0.4353, 0.1216],\n",
-              "         ...,\n",
-              "         [0.1843, 0.4118, 0.4314,  ..., 0.4549, 0.4471, 0.2353],\n",
-              "         [0.1804, 0.3137, 0.3137,  ..., 0.3216, 0.3255, 0.1608],\n",
-              "         [0.0588, 0.1098, 0.0706,  ..., 0.0784, 0.1647, 0.0941]],\n",
-              "\n",
-              "        [[0.0000, 0.0784, 0.0039,  ..., 0.0549, 0.1412, 0.0314],\n",
-              "         [0.1294, 0.3608, 0.4118,  ..., 0.3569, 0.3961, 0.1804],\n",
-              "         [0.1373, 0.4745, 0.6039,  ..., 0.5098, 0.5255, 0.2118],\n",
-              "         ...,\n",
-              "         [0.0471, 0.2745, 0.2863,  ..., 0.2941, 0.2863, 0.0745],\n",
-              "         [0.0824, 0.2157, 0.2039,  ..., 0.1882, 0.1961, 0.0314],\n",
-              "         [0.0000, 0.0275, 0.0000,  ..., 0.0000, 0.0510, 0.0000]],\n",
-              "\n",
-              "        [[0.0078, 0.0902, 0.0275,  ..., 0.0000, 0.0275, 0.0000],\n",
-              "         [0.1647, 0.4000, 0.4667,  ..., 0.1529, 0.2471, 0.0745],\n",
-              "         [0.2157, 0.5490, 0.6902,  ..., 0.2431, 0.3137, 0.0392],\n",
-              "         ...,\n",
-              "         [0.1647, 0.4000, 0.4157,  ..., 0.4510, 0.4431, 0.2314],\n",
-              "         [0.1686, 0.3020, 0.3020,  ..., 0.3176, 0.3176, 0.1529],\n",
-              "         [0.0431, 0.0941, 0.0588,  ..., 0.0745, 0.1608, 0.0902]]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 23
+          "execution_count": 65
         }
       ]
     },
@@ -863,12 +655,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2V8jXRpCrK60",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 239
-        },
-        "outputId": "61858e72-13fe-4d51-d940-930d549b21b3"
+        "id": "2V8jXRpCrK60"
       },
       "source": [
         "#Training the model\n",
@@ -897,40 +684,6 @@
         "  toc = time.time()\n",
         "  \n",
         "  print(\"[{}/{}] Loss : {} Time Taken : {}\".format(epochs,num_epochs,loss_per_epoch,(toc - tic)/1000))\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-29-2820648ca825>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutputs\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDEVICE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDEVICE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0mpreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mloss\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreds\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'to'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Q0Jq3jo2MpKg"
-      },
-      "source": [
-        "true_1_hot = torch.eye(10)[train_dataset[0][1].squeeze(1)]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "V1lllKz-Mpk0"
-      },
-      "source": [
-        "trai"
       ],
       "execution_count": null,
       "outputs": []
