Dice Loss implemented

--- a/Semantic_Segmentation.ipynb
+++ b/Semantic_Segmentation.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1jCuFfDX_kYggZY38g-sYFmAI2FDgZMZN",
-      "authorship_tag": "ABX9TyN0TIMb0QkSuxTOy/NZAcxu",
+      "authorship_tag": "ABX9TyMmKEYUdaO2QRsIR6p4rOtz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J-tT27Daf6DP",
-        "outputId": "40cdcc2f-fed7-4ad9-af95-c931adfca367"
+        "outputId": "7af54dfa-c105-4b17-f04b-46a8c1427331"
       },
       "source": [
         "# !pip install torch==1.8.0+cu111 torchvision==0.9.0+cu111 torchaudio==0.8.0 -f https://download.pytorch.org/whl/torch_stable.html\n",
@@ -64,10 +64,18 @@
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: gputil in /usr/local/lib/python3.7/dist-packages (1.4.0)\n",
+            "Collecting gputil\n",
+            "  Downloading https://files.pythonhosted.org/packages/ed/0e/5c61eedde9f6c87713e89d794f01e378cfd9565847d4576fa627d758c554/GPUtil-1.4.0.tar.gz\n",
+            "Building wheels for collected packages: gputil\n",
+            "  Building wheel for gputil (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for gputil: filename=GPUtil-1.4.0-cp37-none-any.whl size=7411 sha256=7af8ab2755ac3b8c981f2640609625bd62881028b8b202616c9ac6021879dc94\n",
+            "  Stored in directory: /root/.cache/pip/wheels/3d/77/07/80562de4bb0786e5ea186911a2c831fdd0018bda69beab71fd\n",
+            "Successfully built gputil\n",
+            "Installing collected packages: gputil\n",
+            "Successfully installed gputil-1.4.0\n",
             "Requirement already satisfied: psutil in /usr/local/lib/python3.7/dist-packages (5.4.8)\n",
             "Requirement already satisfied: humanize in /usr/local/lib/python3.7/dist-packages (0.5.1)\n",
-            "Gen RAM Free: 12.7 GB  | Proc size: 119.1 MB\n",
+            "Gen RAM Free: 12.7 GB  | Proc size: 118.4 MB\n",
             "GPU RAM Free: 15109MB | Used: 0MB | Util   0% | Total 15109MB\n"
           ],
           "name": "stdout"
@@ -81,7 +89,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T49EAMFNqCAn",
-        "outputId": "13f9d074-0f76-4472-a5b6-f893602eae8b"
+        "outputId": "7e4c677c-24d5-435f-fa87-395f759b87cd"
       },
       "source": [
         "%cd '/content/drive/MyDrive/Datasets /Semantic Drone Dataset'"
@@ -126,7 +134,8 @@
         "from torchvision import transforms \n",
         "from torchvision import datasets\n",
         "import torchvision.transforms.functional as TF\n",
-        "import torch.nn.functional as F"
+        "import torch.nn.functional as F\n",
+        "from torch.autograd import Variable"
       ],
       "execution_count": 4,
       "outputs": []
@@ -140,7 +149,7 @@
         "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
         "LR = 1e-3"
       ],
-      "execution_count": 73,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -148,10 +157,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 306
+          "height": 370
         },
         "id": "ekaQT47GXC4s",
-        "outputId": "226c41d1-7cb9-42bb-ebc3-982849dc6794"
+        "outputId": "e56f5639-9626-4535-8d1c-17c874938e84"
       },
       "source": [
         "#Viewing the images\n",
@@ -230,7 +239,7 @@
           "height": 751
         },
         "id": "KzhwB_aOPmDC",
-        "outputId": "46e937bc-c220-4274-bad9-1f510ca71df5"
+        "outputId": "410a0ddf-0673-45b6-9364-22ab2e83874d"
       },
       "source": [
         "color_scheme"
@@ -523,7 +532,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mbpu3Efc4Hmn",
-        "outputId": "5f1f1ba7-20b4-43c1-8189-fd13a05c397a"
+        "outputId": "89439c24-4dcc-4217-c11f-b10f6634e9b4"
       },
       "source": [
         "dataset[0][1].shape"
@@ -777,7 +786,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_XIipuU9pyzS",
-        "outputId": "6b4ee673-cf6f-4b29-b8a2-9f34ee14a3d2"
+        "outputId": "d375d32d-24e6-49fd-bb74-1fd7f0f6baec"
       },
       "source": [
         "model = Unet(num_classes=23)\n",
@@ -888,15 +897,43 @@
         "id": "_tCGZOVNglUf"
       },
       "source": [
-        "def DICEscore(preds,outputs,smooth=1):\n",
-        "  dice_total = 0\n",
-        "  for i in range(batch_size):\n",
-        "     dice_total +=(torch.argmax(preds[i],axis=0).unsqueeze(0) == outputs[i]).sum()/(preds.shape[1]*preds.shape[2])\n",
-        "  dice_total_batch = dice_total / batch_size\n",
-        "  return dice_total"
+        "def DICEloss(preds,outputs,smooth=1):\n",
+        "  preds = F.softmax(preds,dim=1)\n",
+        "  labels_one_hot = F.one_hot(outputs, num_classes = 23).permute(0,3,1,2).contiguous()\n",
+        "  intersection = torch.sum(preds*labels_one_hot)\n",
+        "  total = torch.sum(preds*preds) + torch.sum(labels_one_hot*labels_one_hot)\n",
+        "  return 1-((2*intersection + smooth)/(total))"
       ],
-      "execution_count": 97,
+      "execution_count": 38,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m6UmHmkxcPdC",
+        "outputId": "4600a1e1-eeb5-4716-e894-5f9c82764be9"
+      },
+      "source": [
+        "DICEloss(preds,outputs)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.2608, device='cuda:0', grad_fn=<RsubBackward1>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -916,17 +953,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pG0e3clffHDt",
-        "outputId": "0a676da8-f311-44d5-f9c5-30e6e92d753f"
+        "outputId": "331cc89a-a73b-49a6-d3dc-e686f397a534"
       },
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 98,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Tue May 25 16:22:17 2021       \n",
+            "Wed May 26 00:45:04 2021       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -935,7 +972,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   69C    P0    32W /  70W |  14962MiB / 15109MiB |      0%      Default |\n",
+            "| N/A   52C    P0    27W /  70W |   1076MiB / 15109MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -953,36 +990,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NSmnDK6_wKCz"
-      },
-      "source": [
-        "loss_fn = nn.CrossEntropyLoss()"
-      ],
-      "execution_count": 33,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "m3xf4hjyUZje"
       },
       "source": [
-        "torch.save(model.state_dict(),'ModelWeights')"
+        "torch.load(model.state_dict(),'ModelWeightsSecondTime')"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2V8jXRpCrK60"
+        "id": "2V8jXRpCrK60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d489a3d0-2780-40fc-9623-f761f4778718"
       },
       "source": [
         "#Training the model\n",
         "import time \n",
         "model.train()\n",
         "\n",
-        "num_epochs = 25\n",
+        "num_epochs = 50\n",
         "loss_per_iteration = []\n",
         "iters = []\n",
         "\n",
@@ -990,21 +1020,20 @@
         "    tic = time.time()\n",
         "\n",
         "    loss_per_epoch = 0.0\n",
-        "    batch_num = 1\n",
+        "    batch_num = 0\n",
         "    for inputs,outputs in train_loader:\n",
         "        \n",
         "        torch.cuda.empty_cache()\n",
         "        inputs,outputs = inputs.to(DEVICE),outputs.to(DEVICE)\n",
         "        preds = model(inputs)\n",
-        "        loss  = loss_fn(preds,outputs.squeeze(axis=1))\n",
+        "        loss  = DICEloss(preds,outputs.squeeze(axis=1))\n",
         "        loss.backward()\n",
         "        opt.step()\n",
         "        opt.zero_grad()\n",
         "        loss_per_epoch += loss\n",
         "        batch_num +=1\n",
         "\n",
-        "    dice_score = DICEscore(preds,outputs)\n",
-        "    print(\"Batch num: {}|Dice Score:{}\".format(batch_num,dice_score))\n",
+        "        print(\"Batch num: {} | Dice Loss:{}\".format(batch_num,loss))\n",
         "    loss_per_iteration.append(loss_per_epoch)\n",
         "    iters.append(epochs)\n",
         "    toc = time.time()\n",
@@ -1016,7 +1045,102 @@
         "    print(\"Saved the model...\")"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Batch num: 1 | Dice Loss:0.2709420919418335\n",
+            "Batch num: 2 | Dice Loss:0.26789939403533936\n",
+            "Batch num: 3 | Dice Loss:0.20515167713165283\n",
+            "Batch num: 4 | Dice Loss:0.29031455516815186\n",
+            "Batch num: 5 | Dice Loss:0.20610278844833374\n",
+            "Batch num: 6 | Dice Loss:0.31269562244415283\n",
+            "Batch num: 7 | Dice Loss:0.3263630270957947\n",
+            "Batch num: 8 | Dice Loss:0.25503015518188477\n",
+            "Batch num: 9 | Dice Loss:0.3020702004432678\n",
+            "Batch num: 10 | Dice Loss:0.27899909019470215\n",
+            "Batch num: 11 | Dice Loss:0.34966492652893066\n",
+            "Batch num: 12 | Dice Loss:0.20525473356246948\n",
+            "Batch num: 13 | Dice Loss:0.2989131212234497\n",
+            "Batch num: 14 | Dice Loss:0.33891934156417847\n",
+            "Batch num: 15 | Dice Loss:0.29015493392944336\n",
+            "Batch num: 16 | Dice Loss:0.2865174412727356\n",
+            "Batch num: 17 | Dice Loss:0.30640459060668945\n",
+            "Batch num: 18 | Dice Loss:0.29725193977355957\n",
+            "Batch num: 19 | Dice Loss:0.33820033073425293\n",
+            "Batch num: 20 | Dice Loss:0.3285204768180847\n",
+            "Batch num: 21 | Dice Loss:0.2456619143486023\n",
+            "Batch num: 22 | Dice Loss:0.26987260580062866\n",
+            "Batch num: 23 | Dice Loss:0.24846702814102173\n",
+            "Batch num: 24 | Dice Loss:0.2977742552757263\n",
+            "Batch num: 25 | Dice Loss:0.2693220376968384\n",
+            "Batch num: 26 | Dice Loss:0.23782187700271606\n",
+            "Batch num: 27 | Dice Loss:0.19844508171081543\n",
+            "Batch num: 28 | Dice Loss:0.25740671157836914\n",
+            "Batch num: 29 | Dice Loss:0.26108068227767944\n",
+            "Batch num: 30 | Dice Loss:0.404455304145813\n",
+            "Batch num: 31 | Dice Loss:0.18483459949493408\n",
+            "Batch num: 32 | Dice Loss:0.22482240200042725\n",
+            "Batch num: 33 | Dice Loss:0.25778627395629883\n",
+            "Batch num: 34 | Dice Loss:0.24984526634216309\n",
+            "Batch num: 35 | Dice Loss:0.24819236993789673\n",
+            "Batch num: 36 | Dice Loss:0.37263190746307373\n",
+            "Batch num: 37 | Dice Loss:0.2823904752731323\n",
+            "Batch num: 38 | Dice Loss:0.41722965240478516\n",
+            "Batch num: 39 | Dice Loss:0.32373183965682983\n",
+            "Batch num: 40 | Dice Loss:0.21512234210968018\n",
+            "Batch num: 41 | Dice Loss:0.19394594430923462\n",
+            "Batch num: 42 | Dice Loss:0.2975050210952759\n",
+            "Batch num: 43 | Dice Loss:0.23014432191848755\n",
+            "Batch num: 44 | Dice Loss:0.3331258296966553\n",
+            "Batch num: 45 | Dice Loss:0.20743316411972046\n",
+            "Batch num: 46 | Dice Loss:0.42082035541534424\n",
+            "Batch num: 47 | Dice Loss:0.3463849425315857\n",
+            "Batch num: 48 | Dice Loss:0.18599838018417358\n",
+            "Batch num: 49 | Dice Loss:0.1425960659980774\n",
+            "Batch num: 50 | Dice Loss:0.2597426176071167\n",
+            "Batch num: 51 | Dice Loss:0.36081254482269287\n",
+            "Batch num: 52 | Dice Loss:0.14575648307800293\n",
+            "Batch num: 53 | Dice Loss:0.19298696517944336\n",
+            "Batch num: 54 | Dice Loss:0.2265898585319519\n",
+            "Batch num: 55 | Dice Loss:0.35282135009765625\n",
+            "Batch num: 56 | Dice Loss:0.17998969554901123\n",
+            "Batch num: 57 | Dice Loss:0.28453660011291504\n",
+            "Batch num: 58 | Dice Loss:0.44882750511169434\n",
+            "Batch num: 59 | Dice Loss:0.3939819931983948\n",
+            "Batch num: 60 | Dice Loss:0.24003803730010986\n",
+            "Batch num: 61 | Dice Loss:0.2381894588470459\n",
+            "Batch num: 62 | Dice Loss:0.2980548143386841\n",
+            "Batch num: 63 | Dice Loss:0.2729857563972473\n",
+            "Batch num: 64 | Dice Loss:0.2211681604385376\n",
+            "Batch num: 65 | Dice Loss:0.32644176483154297\n",
+            "Batch num: 66 | Dice Loss:0.38344722986221313\n",
+            "Batch num: 67 | Dice Loss:0.2998209595680237\n",
+            "Batch num: 68 | Dice Loss:0.33721476793289185\n",
+            "Batch num: 69 | Dice Loss:0.2505066394805908\n",
+            "Batch num: 70 | Dice Loss:0.22328394651412964\n",
+            "Batch num: 71 | Dice Loss:0.36945879459381104\n",
+            "Batch num: 72 | Dice Loss:0.21507281064987183\n",
+            "Batch num: 73 | Dice Loss:0.2680237293243408\n",
+            "Batch num: 74 | Dice Loss:0.27130407094955444\n",
+            "Batch num: 75 | Dice Loss:0.2955738306045532\n",
+            "Batch num: 76 | Dice Loss:0.2788214683532715\n",
+            "Batch num: 77 | Dice Loss:0.22819674015045166\n",
+            "Batch num: 78 | Dice Loss:0.29524463415145874\n",
+            "Batch num: 79 | Dice Loss:0.27018874883651733\n",
+            "Batch num: 80 | Dice Loss:0.36030131578445435\n",
+            "Batch num: 81 | Dice Loss:0.23770958185195923\n",
+            "Batch num: 82 | Dice Loss:0.27934008836746216\n",
+            "Batch num: 83 | Dice Loss:0.2445838451385498\n",
+            "Batch num: 84 | Dice Loss:0.3199102282524109\n",
+            "Batch num: 85 | Dice Loss:0.17001157999038696\n",
+            "Batch num: 86 | Dice Loss:0.1914287805557251\n",
+            "Batch num: 87 | Dice Loss:0.2803221344947815\n",
+            "Batch num: 88 | Dice Loss:0.25956088304519653\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1031,7 +1155,7 @@
       "source": [
         "plt.imshow(torch.argmax(F.softmax(preds,dim=1),axis=1)[0].cpu(),cmap=\"gray\")"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1073,7 +1197,7 @@
       "source": [
         "plt.imshow(torch.argmax(F.softmax(model(TF.to_tensor(TF.resize(image,size=(256,256))).to(DEVICE).unsqueeze(0)),dim=1),axis=1).cpu()[0],cmap='gray')"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1115,7 +1239,7 @@
       "source": [
         "plt.imshow((TF.to_tensor(TF.resize(label,size=(256,256))))[0],cmap='gray')"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
